src/main/webapp/resources/style.css
* {
    margin: 0;
    padding: 0;
    color: #555555;
}
body{
    background-color: #efefef;
}

#logo {
    /*font-family: Rockwell, serif;*/
    /*font-size: 3em;*/
    float: left;
    width: 75%
}

#logo img{
    width: 35%;
}

/*#logo span {*/
    /*font-size: 0.72em;*/
    /*text-decoration: overline;*/
    /*color: white;*/
    /*text-shadow: 1px 1px 1px black;*/
/*}*/

#logged-user-details{
    float: left;
    width: 25%;
    text-align: right;
}

#wrapper {
    background-color: #e8ecef;
    width: 920px;
    margin-left: auto;
    margin-right: auto;
    border-left: 1px solid #909191;
    border-right: 1px solid #909191;
    border-bottom: 1px solid #909191;
}

#header {
    border-bottom: 1px solid #909191;
    padding: 15px;
    color: white;
    background-color: #4b5662;
    overflow: hidden;
}
#header h3, #header p, #header a{
    color: white;
    text-shadow: 1px 1px 1px black;
}

#main-content {
}

#navigation {
    text-align: center;
    border-bottom: 1px solid #909191;
    padding: 10px;
}

#extra {
    width: 795px;
    margin: 50px auto;
    text-align: center;
}
#extra h4{
    color: #aeafaf;
    text-shadow: 1px 1px white, -1px -1px #4b5662;
}

#module-wrapper {
    padding-left: 60px;
    padding-right: 60px;
}

#module-wrapper h3 {
    padding-top: 20px;
    padding-bottom: 20px;
}

.module{
    color: #333333;
    width: auto;
    margin-bottom: 20px;
    background-color: #F8F8F8  ;
    border: 1px solid black;
    border-radius: 5px;
    box-shadow: 0px 1px 2px 1px grey;
    font-weight:bold;
    -moz-transition: transform 0.3s;
    -ms-transition: transform 0.3s;
    transition: transform 0.3s;
}
.module:hover{
    -moz-transform: scale(1.1);
    -ms-transform: scale(1.1);
    transform: scale(1.1);
}

.module:active{
}

.module:nth-child(even) {
}

.module h4 {
    display: inline-block;
    background-color: #4b5662  ;
    padding: 8px;
    margin-left: -10px;
    margin-top: -10px;
    margin-bottom: 5px;
    border: 1px solid black;
    float:left;
    color: white;
    max-width: 600px;
}
.module form{
    display: block;
    padding: 5px;
    margin-top: 2px;
    margin-bottom: 7px;
}

.module .time {
    float: right;
    padding: 5px;
}

.clear-float {
    clear: both;
}
.progressbar{
    display: block;
    width: 74%;
    height: 10px;
    background-color: limegreen;
    border-radius: 5px;
    border-top: 1px solid #4b5662;
}
.progressBackground{
    display: block;
    width: 100%;
    background-color: #282828 ;
    border-radius: 5px;
    box-shadow: inset 0px 0px 8px 2px grey;
}

#schedule-generator{
    width: 100%;
    text-align: center;
    border-bottom: 1px solid #909191;
    padding: 5px 0px;
}
#schedule-generator label{
    padding: 5px 0px;
    float: left;
}
#schedule-generator input{
    margin: 5px 0px;
    float: right;
}
#schedule-generator #hours-pr-day-input{
    width: 50px;
}
#schedule-generator form{
    text-align: left;
    width: 320px;
    margin: 0 auto;
    padding: 5px;
    border: 1px solid #909191;
    background-color: white;
}
#schedule-generator a{
    text-decoration: underline;
    cursor: hand;
}
#schedule-generator #schedule-submit-button{
    padding: 3px;
}

#deadline-submit-button{
    padding: 3px;
}

#schedule-generator-input{
    display: inline-block;
}

#deadline-generator-input{
    display: inline-block;
}

#loading-text{
    display: inline-block;
    width: 100%;
    text-align: center;
    padding-top: 20px;
}
#loading-gif{
    width: 200px;
    height: 200px;
}

